--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Aidan's portfolio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aidan Siaotong's Portfolio</title>
+</head>
+<body style="margin:0; height:100vh;">
+  <iframe src="Aidan_Siaotong_Portfolio.pdf" style="width:100%; height:100%; border:none;"></iframe>
+</body>
+</html>
