--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aidan Siaotong's Portfolio</title>
+  <title>My Portfolio</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
-<body style="margin:0; height:100vh;">
-  <iframe src="Aidan_Siaotong_Portfolio.pdf" style="width:100%; height:100%; border:none;"></iframe>
+<body>
+  <iframe src="Aidan_Siaotong_Portfolio.pdf"></iframe>
 </body>
 </html>
