--- a/index.html
+++ b/index.html
@@ -5,18 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+    body { margin: 0; background: #f5f5f5; display: flex; justify-content: center; }
+    #pdf-container { width: 100%; max-width: 900px; padding: 10px; box-sizing: border-box; }
+    canvas { display: block; margin: 10px 0; width: 100% !important; height: auto !important; }
   </style>
 </head>
 <body>
-  <iframe src="Aidan_Siaotong_Portfolio.pdf"></iframe>
+  <div id="pdf-container"></div>
+
+  <!-- PDF.js library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
+  <script>
+    const url = 'Aidan_Siaotong_Portfolio.pdf';
+    const container = document.getElementById('pdf-container');
+
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
+
+    pdfjsLib.getDocument(url).promise.then(pdf => {
+      const renderPage = pageNum => {
+        pdf.getPage(pageNum).then(page => {
+          const viewport = page.getViewport({ scale: 1.5 });
+          const canvas = document.createElement('canvas');
+          const context = canvas.getContext('2d');
+          canvas.height = viewport.height;
+          canvas.width = viewport.width;
+          container.appendChild(canvas);
+
+          page.render({ canvasContext: context, viewport: viewport }).promise.then(() => {
+            // Auto-scale canvas width to container
+            canvas.style.width = '100%';
+            canvas.style.height = 'auto';
+          });
+        });
+      };
+
+      for (let i = 1; i <= pdf.numPages; i++) {
+        renderPage(i);
+      }
+    });
+  </script>
 </body>
 </html>
