--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <style>
-    body { margin: 0; background: #f5f5f5; display: flex; justify-content: center; }
-    #pdf-container { width: 100%; max-width: 900px; padding: 10px; box-sizing: border-box; }
-    canvas { display: block; margin: 10px 0; width: 100% !important; height: auto !important; }
+    body { 
+      margin: 0; 
+      background: #121212; 
+      display: flex; 
+      justify-content: center; 
+    }
+    #pdf-container { 
+      width: 100%; 
+      max-width: 900px; 
+      padding: 20px; 
+      box-sizing: border-box; 
+    }
+    canvas { 
+      display: block; 
+      margin: 15px 0; 
+      width: 100% !important; 
+      height: auto !important; 
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      border-radius: 8px;
+      background: #fff; /* keep PDF content readable */
+    }
   </style>
 </head>
 <body>
@@ -17,7 +35,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 
   <script>
-    const url = 'Aidan_Siaotong_Portfolio.pdf';
+    const url = 'portfolio.pdf'; // Make sure this matches your PDF filename
     const container = document.getElementById('pdf-container');
 
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
@@ -33,7 +51,6 @@
           container.appendChild(canvas);
 
           page.render({ canvasContext: context, viewport: viewport }).promise.then(() => {
-            // Auto-scale canvas width to container
             canvas.style.width = '100%';
             canvas.style.height = 'auto';
           });
