--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 
   <script>
-    const url = 'portfolio.pdf'; // Make sure this matches your PDF filename
+    const url = 'Aidan_Siaotong_Portfolio.pdf';
     const container = document.getElementById('pdf-container');
 
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
